# encapsulated-resources

./: README.md  default.nix  encapsulated-resources.cabal  encapsulated-resources.nix
nix/: default.nix  haskell-packages.nix
src/System/: EncapsulatedResources.hs
test/: Runner.hs  unit-main.hs
test/System/EncapsulatedResources/Test/Unit/: EncapsulatedResources.hs
