name: encapsulated-resources
version: 0.1.0.0
synopsis: Encapsulate system resources as processes
description:
  Access system resources (file system, network, processes) in a manner
  reminiscent of nested virtual machines.
homepage: https://github.com/plcplc/encapsulated-resources
license: GPL-3
license-file: LICENSE
author: Philip Lykke Carlsen
maintainer: plcplc@gmail.com
build-type: Simple
cabal-version: >=1.10

flag releaseBuild
  description: Build for release. I.e. enable more checks.
  default: True
  manual: True

library

  exposed-modules:
    System.EncapsulatedResources

  build-depends:
    base == 4.7.*,
    bytestring,
    containers,
    data-default,
    directory,
    network,
    stm,
    text,
    transformers,
    unix

  hs-source-dirs: src

  default-language: Haskell2010

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

test-suite unittest

  type: exitcode-stdio-1.0

  main-is: unit-main.hs

  Other-Modules:
    Runner
    System.EncapsulatedResources.Test.EncapsulatedResources
    System.EncapsulatedResources.Test.Unit.EncapsulatedResources

  hs-source-dirs: test

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
    base == 4.7.*,
    bytestring,
    containers,
    encapsulated-resources,
    hspec,
    stm,
    text,
    transformers

  default-language: Haskell2010
